--- a/styles.css
+++ b/styles.css
@@ -53,30 +53,40 @@ p{
   #title{
     color: #ffffff ;
     background-color: #ff4c68;
-    padding-bottom: 490px;
+    padding-bottom: 890px;
     text-align: center;
     
 }
-.h1{
+.h1,h2,h3{
   
   font-family: "Montserrat Black";
-  font-size: 3.5rem !important;
+  font-size: 4.5rem !important;
   line-height: 1.5 !important;
   padding-top: 100px;
   
  
 }
+p{
+  font-size: 2rem;
+}
+.brand-font{
+  font-size: 3.5rem !important;
+}
 .dog{
-  height: 80%;
+  height: 100%;
   rotate:  0deg;
-  
+  padding-top: 50px;
   position: static;
   
  
  
  
 }
-
+.btn-group-lg>.btn, .btn-lg {
+  
+  --bs-btn-font-size: 2.25rem !important;
+  
+}
 
 
 
